--- a/Empresa/core/templates/core/base.html
+++ b/Empresa/core/templates/core/base.html
@@ -1,17 +1,48 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
+
+
 </head>
+
 <body>
-    <h1>Bienvenidos a mi sitio web</h1>
-    <nav>
-        <a href="">Home</a>
-        <a href="">Quienes somos</a>
-        <a href="">Contacto</a>
-    </nav>
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'whoarewe' %}">Quienes somos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="mt-4 p-5 bg-danger text-white rounded">
+        <h1>Clase 2 DJango</h1>
+        <p>Agregamos páginas y el base</p>
+      </div>
+
     <section>
         <h2>Contenido principal</h2>
         {% block principal %}
@@ -21,5 +52,8 @@
     <footer>
         <h2>20-08-2024</h2>
     </footer>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
