--- a/Empresa/core/templates/core/base.html
+++ b/Empresa/core/templates/core/base.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </nav>
-      <div class="mt-4 p-5 bg-danger text-white rounded">
+      <div class="mt-3 mb-3 p-5 bg-danger text-white rounded">
         <h1>Clase 2 DJango</h1>
         <p>Agregamos páginas y el base</p>
       </div>
