--- a/Empresa/core/templates/core/base.html
+++ b/Empresa/core/templates/core/base.html
@@ -49,7 +49,8 @@
 
         {% endblock %}
     </section>
-    <footer>
+
+    <footer class="footer bg-dark p-5">
         <h2>20-08-2024</h2>
     </footer>
     <!-- Latest compiled JavaScript -->
