--- a/Empresa/core/templates/core/base.html
+++ b/Empresa/core/templates/core/base.html
@@ -38,28 +38,6 @@
 
 <body>
 
-	<!-- <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="javascript:void(0)">Logo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mynavbar">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'whoarewe' %}">Quienes somos</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
-
 	<div class="py-1 bg-primary">
 		<div class="container">
 			<div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
@@ -101,14 +79,13 @@
 							<a class="dropdown-item" href="shop.html">Shop</a>
 							<a class="dropdown-item" href="wishlist.html">Wishlist</a>
 							<a class="dropdown-item" href="product-single.html">Single Product</a>
-							<a class="dropdown-item" href="cart.html">Cart</a>
 							<a class="dropdown-item" href="checkout.html">Checkout</a>
 						</div>
 					</li>
-					<li class="nav-item"><a href="{% url 'whoarewe' %}" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+					<li class="nav-item"><a href="{% url 'about' %}" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="{% url 'blog' %}" class="nav-link">Blog</a></li>
 					<li class="nav-item"><a href="{% url 'contacto' %}" class="nav-link">Contact</a></li>
-					<li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span
+					<li class="nav-item cta cta-colored"><a href="{% url 'cart' %}" class="nav-link"><span
 								class="icon-shopping_cart"></span>[0]</a></li>
 
 				</ul>
