Update: Clase 4 - Menu administrador

--- a/Empresa/core/templates/core/contacto.html
+++ b/Empresa/core/templates/core/contacto.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% block titulo %} contact {% endblock %}
+{% block breadcrumn %} desc contacto {% endblock %}
 {% block principal %}
 <div class="hero-wrap hero-bread" style="background-image: url({% static 'core/images/bg_1.jpg' %});">
     <div class="container">
