--- a/Empresa/core/templates/core/index.html
+++ b/Empresa/core/templates/core/index.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% block titulo %} Home {% endblock %}
+{% block breadcrumn %} desc index {% endblock %}
 {% block principal %}
 <div>
     <section id="home-section" class="hero">
