--- a/Empresa/core/templates/core/base.html
+++ b/Empresa/core/templates/core/base.html
@@ -6,7 +6,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Vegefoods | {% block titulo %}{% endblock %}</title>
+	{% block css %}{% endblock %}
 	<!-- Latest compiled and minified CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- ------- -->
@@ -28,11 +29,9 @@
     <link rel="stylesheet" href="{% static 'core/css/bootstrap-datepicker.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/jquery.timepicker.css' %}">
 
-    
     <link rel="stylesheet" href="{% static 'core/css/flaticon.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/icomoon.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-
 
 </head>
 
@@ -43,6 +42,11 @@
 			<div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
 				<div class="col-lg-12 d-block">
 					<div class="row d-flex">
+						<div class="col-md pr-4 d-flex topper align-items-center">
+							<div class="icon mr-2 d-flex justify-content-center align-items-center"><span
+									class="icon-phone2"></span></div>
+							<span class="text">{% block breadcrumn %}{% endblock %}</span>
+						</div>
 						<div class="col-md pr-4 d-flex topper align-items-center">
 							<div class="icon mr-2 d-flex justify-content-center align-items-center"><span
 									class="icon-phone2"></span></div>
@@ -68,6 +72,8 @@
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
+			<h2></h2>
+			<p></p>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
@@ -199,6 +205,7 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="{% static 'core/js/google-map.js' %}"></script>
 	<script src="{% static 'core/js/main.js' %}"></script>
+	{% block js %}{% endblock %}
 </body>
 
 </html>
