--- a/Empresa/core/templates/core/blog.html
+++ b/Empresa/core/templates/core/blog.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% block titulo %} blog {% endblock %}
+{% block breadcrumn %} desc blog {% endblock %}
 {% block principal %}
 <div class="hero-wrap hero-bread" style="background-image: url('{% static 'core/images/bg_1.jpg' %}');">
     <div class="container">
