Update: Clase 5 CRUD(insert y listar)

--- a/Empresa/core/templates/core/productos/add.html
+++ b/Empresa/core/templates/core/productos/add.html
@@ -3,4 +3,14 @@
 {% block titulo %} about us {% endblock %}
 {% block breadcrumn %} desc about {% endblock %}
 {% block principal %}
+
+<form method="POST">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Add">
+</form>
+
+
+{{ msj }}
+
 {% endblock %}
