--- a/Empresa/core/templates/core/productos/list.html
+++ b/Empresa/core/templates/core/productos/list.html
@@ -8,7 +8,8 @@
 <div class="contenedor-productos m-5">
     {% for producto in listaProductos %}
     <div class="card m-3" style="width:200px">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+        <img class="card-img-top" src="{% static 'core/images/'|add:producto.nombre|add:'.jpg' %}
+        " alt="Card image">
         <div class="card-body">
             <h4 class="card-title">{{ producto.nombre }}</h4>
             <p class="card-text">{{ producto.description }}</p>
