--- a/Empresa/core/templates/core/base.html
+++ b/Empresa/core/templates/core/base.html
@@ -201,10 +201,11 @@
 	<script src="{% static 'core/js/jquery.animateNumber.min.js' %}"></script>
 	<script src="{% static 'core/js/bootstrap-datepicker.js' %}"></script>
 	<script src="{% static 'core/js/scrollax.min.js' %}"></script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="{% static 'core/js/google-map.js' %}"></script>
 	<script src="{% static 'core/js/main.js' %}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="{% static 'core/js/funcionalidades.js' %}"></script>
 	{% block js %}{% endblock %}
 </body>
 
